word wrap fix

--- a/src/app/components/notes-list/notes-list.component.scss
+++ b/src/app/components/notes-list/notes-list.component.scss
@@ -12,6 +12,7 @@
     .note-body {
       font-family: $fontNotes;
       font-size: 1.2rem;
+      word-wrap: break-word;
     }
     
     // .buttons-section {
