--- a/src/app/containers/campaign-details/campaign-details.component.scss
+++ b/src/app/containers/campaign-details/campaign-details.component.scss
@@ -1,8 +1,21 @@
 @import '../../shared/variables/variables';
+@import '../../shared/mixins/flexbox';
 
-.campaign-details-header {
-  width: 100%;
-  background-color: $characterBackgroundColor;
-  color: $fontColorSecondary;
-  margin-bottom: 20px;
+.campaign-details {
+  &-main {
+    @include flexbox($justify: space-between);
+    &-char {
+      width: 49%;
+    }
+    &-notes {
+      width: 49%;
+    }
+  }
+  &-header {
+    width: 100%;
+    background-color: $characterBackgroundColor;
+    color: $fontColorSecondary;
+    margin-bottom: 20px;
+  }
 }
+
